--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1426,7 +1426,7 @@ input {
   &__checkmark {
     width: 20px;
     height: 20px;
-    border: 1px solid white;
+    border: 1px solid var(--color-text);
     border-radius: 10px;
     margin: auto 0;
     padding: 2px;
