--- a/stylesheets/_bchat_left_pane.scss
+++ b/stylesheets/_bchat_left_pane.scss
@@ -25,7 +25,7 @@ $bchat-compose-margin: 20px;
 
     &:hover {
       background: var(--color-clickable-hovered);
-      box-shadow:var(--color-Bchat-shadow) ;
+      box-shadow: var(--color-Bchat-shadow);
       // background: #242431;
     }
 
@@ -36,7 +36,7 @@ $bchat-compose-margin: 20px;
       .module-conversation__user__profile-name,
       .module-conversation-list-item__message__text {
         color: var(--color-text);
-        
+
       }
     }
 
@@ -49,9 +49,9 @@ $bchat-compose-margin: 20px;
       padding-left: 6px;
       // border-top: 1px solid #1c1c26;
       border-bottom: 1px solid var(--color-borderBottomColor);
+
       // border-bottom: 1px solid #1c1c26;
-      .verticalLine
-      {
+      .verticalLine {
         width: 5px;
         background-color: #128B17;
         margin-right: 5px;
@@ -62,24 +62,24 @@ $bchat-compose-margin: 20px;
 
     &__unread-count {
       color: var(--color-text);
-    /* background: var(--color-clickable-hovered); */
-    background-color: #128B17;
-    position: relative;
-    // font-weight: 700 !important;
-    box-shadow: none !important;
-    margin: 0 !important;
-    flex-shrink: 0;
-    // left: 68%;
-    top: -2px;
-    /* margin-top: 13px; */
-    width: 20px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 30px;
-    font-size: 9px;
-    font-family: $bchat-font-poppin-medium;
+      /* background: var(--color-clickable-hovered); */
+      background-color: #128B17;
+      position: relative;
+      // font-weight: 700 !important;
+      box-shadow: none !important;
+      margin: 0 !important;
+      flex-shrink: 0;
+      // left: 68%;
+      top: -2px;
+      /* margin-top: 13px; */
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 30px;
+      font-size: 9px;
+      font-family: $bchat-font-poppin-medium;
     }
 
     &__header__date,
@@ -105,9 +105,9 @@ $bchat-compose-margin: 20px;
     &__header__name--with-unread .module-conversation__user__profile-number,
     &__header__name--with-unread .module-conversation__user__profile-name {
       color: var(--color-text);
-    
+
     }
-    
+
   }
 }
 
@@ -143,6 +143,7 @@ $bchat-compose-margin: 20px;
     transition: $bchat-transition-duration;
     box-shadow: 0px 0px 5px 0px #00000029;
 
+
     &__title {
       padding: 0 var(--margins-sm);
       flex-grow: 1;
@@ -150,15 +151,22 @@ $bchat-compose-margin: 20px;
       font-family: $bchat-font-poppin-semibold;
       font-size: 22px;
     }
-
-    .dayAndNightIcon
+    &_gearIcon
     {
+      svg
+      {
+        color:var(--color-text);
+      }
+    }
+
+    .dayAndNightIcon {
       background-image: var(--image-DayNight);
       width: 25px;
       height: 25px;
       background-size: contain;
       cursor: pointer;
     }
+
 
     .bchat-button {
       margin-inline-start: auto;
@@ -186,14 +194,15 @@ $bchat-compose-margin: 20px;
   &__list {
     height: -webkit-fill-available;
   }
-&__chatHeader
-{
+
+  &__chatHeader {
     position: relative;
     left: 12px;
     font-family: $bchat-font-default;
     font-size: 24px;
     font-weight: bold;
-}
+  }
+
   &__subHeader {
     text-align: center;
     font-family: $bchat-font-poppin-semibold;
@@ -208,26 +217,24 @@ $bchat-compose-margin: 20px;
     // align-items: center;
     overflow-y: auto;
     overflow-x: hidden;
-   
-    &-closed
-    {
-      &--header
-      {
-        font-family:$bchat-font-poppins-bold;
+
+    &-closed {
+      &--header {
+        font-family: $bchat-font-poppins-bold;
         font-size: 22px;
         justify-content: flex-start;
         width: 87%;
         margin-left: 20px;
         margin-top: 30px;
       }
-      &--subHeader
-      {
+
+      &--subHeader {
         display: flex;
         justify-content: flex-start;
-        font-family:$bchat-font-poppin-regular;
+        font-family: $bchat-font-poppin-regular;
         font-size: 18px;
         width: 88%;
-        margin:30px 0 8px 20px;
+        margin: 30px 0 8px 20px;
         // margin-top: 13px;
         // margin-left: 20px;
         // margin-bottom: 8px;
@@ -235,38 +242,34 @@ $bchat-compose-margin: 20px;
       }
 
     }
-    
-    &-open
-    {
-      &hint-message
-      {
+
+    &-open {
+      &hint-message {
         width: 90%;
         margin: 0 auto;
         font-size: 12px;
         color: #6E6E84;
         padding-right: 69px;
-        font-family:$bchat-font-poppin-regular;
+        font-family: $bchat-font-poppin-regular;
       }
-      &-title
-      {
-        margin-top:53px;
-        margin-left:20px;
-        margin-bottom:10px;
+
+      &-title {
+        margin-top: 53px;
+        margin-left: 20px;
+        margin-bottom: 10px;
         font-family: $bchat-font-poppin-medium;
       }
     }
 
-    ::placeholder
-    {
+    ::placeholder {
       font-family: $bchat-font-poppin-medium;
     }
 
-    .buttonBox
-    {
+    .buttonBox {
       width: 100%;
-    background-color: var(--color-inboxBgColor);
-    padding: 0 0 ;
-    text-align: center;
+      background-color: var(--color-inboxBgColor);
+      padding: 0 0;
+      text-align: center;
     }
 
     .nextButton {
@@ -402,16 +405,17 @@ $bchat-compose-margin: 20px;
 }
 
 .bchat-search-input {
-    height: 60px;
-    width: 100%;
-    margin-inline-end: 1px;
-    margin-bottom: 10px;
-    display: inline-flex;
-    flex-shrink: 0;
-    background:var(--color-inboxBgColor);
-    padding: 0 21px;
-    box-shadow:var(--color-Bchat-shadow);
- .bchat-icon-button {
+  height: 60px;
+  width: 100%;
+  margin-inline-end: 1px;
+  margin-bottom: 10px;
+  display: inline-flex;
+  flex-shrink: 0;
+  background: var(--color-inboxBgColor);
+  padding: 0 21px;
+  box-shadow: var(--color-Bchat-shadow);
+
+  .bchat-icon-button {
     margin: auto 10px;
   }
 
@@ -430,9 +434,10 @@ $bchat-compose-margin: 20px;
       outline: none !important;
     }
   }
+
   ::placeholder {
     font-family: $bchat-font-poppin-medium;
-    color:#BABABA
+    color: #BABABA
   }
 }
 
@@ -451,7 +456,7 @@ $bchat-compose-margin: 20px;
   flex-direction: column;
   align-items: center;
   margin: auto;
- 
+
 
   // for bchat style
 
@@ -465,7 +470,7 @@ $bchat-compose-margin: 20px;
     /* color: #fff; */
     color: #4E4E5F;
     font-size: 24px;
-    
+
 
   }
 
@@ -495,7 +500,6 @@ $bchat-compose-margin: 20px;
   .bchat-button.square-outline.square.danger {
     flex-grow: 1;
     height: $composition-container-height;
-
     border: var(--border-bchat);
   }
 }
@@ -552,8 +556,15 @@ $bchat-compose-margin: 20px;
 
   &-bottom-buttons {
     @include bottom-buttons();
-    background-color: #2B2B38;
+    background-color: var(--color-inboxBgColor);
     padding: 11px;
+
+    .bchat-button.square-outline.square.danger {
+      flex-grow: 1;
+      background-color: var(--color-clearBtn);
+      height: 45px;
+      border:none;
+    }
 
     .bchat-button {
       vertical-align: middle;
@@ -568,6 +579,8 @@ $bchat-compose-margin: 20px;
       margin: 0 auto;
       color: red;
       font-family: $bchat-font-poppin-semibold;
+
+      
     }
   }
 
@@ -603,6 +616,7 @@ $bchat-compose-margin: 20px;
 
     &-span {
       font-family: $bchat-font-poppin-medium;
+      font-size: 18px;
     }
 
     &>div {
