--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -639,6 +639,7 @@
   padding-bottom: 8px;
   padding-inline-start: 16px;
   align-items: center;
+  border-bottom: var(--color-bchat-border);
 
   cursor: pointer;
 
