--- a/stylesheets/_bchat_group_panel.scss
+++ b/stylesheets/_bchat_group_panel.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   height: 93vh;
   width: -webkit-fill-available;
-  // background: var(--color-cell-background);
-  background: #181821;
+  background: var(--color-cell-background);
+  // background: #181821;
   border-left: var(--border-bchat);
 
   align-items: center;
@@ -116,6 +116,7 @@
     align-items: center;
     border: none;
     border-top: var(--border-bchat);
+    background-color: var(--color-composeMsgInput);
   }
 
   .module-empty-state {
