--- a/stylesheets/_bchat_theme.scss
+++ b/stylesheets/_bchat_theme.scss
@@ -145,7 +145,7 @@
   }
   .checkedCircle
       {
-        border: 1px solid white;
+        border: 1px solid var(--color-text);
       }
   &.message-selected {
     background-color: rgba(40, 121, 251, .3);
