--- a/stylesheets/_bchat_group_panel.scss
+++ b/stylesheets/_bchat_group_panel.scss
@@ -84,11 +84,10 @@
     min-height: 3rem;
     font-size: 0.8rem;
     color: var(--color-text);
-    // background: var(--color-cell-background);
-    background: #181821;
+    background: var(--color-cell-background);
+    // background: #181821;
     // border-top: var(--border-bchat);
-    border-top:2px solid #262631;
-    border-bottom:2px solid #262631;
+    border-bottom: var(--color-bchat-border);
     // border-bottom: var(--border-bchat);
 
     width: -webkit-fill-available;
