--- a/stylesheets/_bchat_left_pane.scss
+++ b/stylesheets/_bchat_left_pane.scss
@@ -61,8 +61,9 @@ $bchat-compose-margin: 20px;
     }
 
     &__unread-count {
-      color: var(--color-text);
+      // color: var(--color-text);
       /* background: var(--color-clickable-hovered); */
+      color:white;
       background-color: #128B17;
       position: relative;
       // font-weight: 700 !important;
