--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -387,6 +387,8 @@
 .module-message-detail__label {
   font-weight: 300;
   padding-inline-end: 5px;
+  font-family: $bchat-font-poppin-semibold;
+  font-size: 16px;
 }
 
 .module-message-detail__delete-button-container {
